# student-schedule-bot

./: .gitignore  Dockerfile  README.md  dev.Dockerfile  dev.docker-compose.yaml  docker-compose.yaml  example.env  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_backend.yml  deploy_backend.yml
student_schedule_bot/: manage.py
student_schedule_bot/bot/: api.py  apps.py
student_schedule_bot/bot/admin/: __init__.py  base.py  user.py
student_schedule_bot/bot/admin/telegram/: bot.py
student_schedule_bot/bot/dependencies/: telegram.py
student_schedule_bot/bot/errors/: http.py
student_schedule_bot/bot/migrations/: 0001_initial.py  0002_bot.py  0003_bot_secret_key.py
student_schedule_bot/bot/models/: base.py  user.py
student_schedule_bot/bot/models/telegram/: __init__.py  bot.py  chat.py
student_schedule_bot/bot/operations/schedule/: read.py
student_schedule_bot/bot/operations/telegram/: bot.py  decorators.py  enums.py  handlers.py  messages.py  webhook.py
student_schedule_bot/bot/schemas/: base.py  telegram.py
student_schedule_bot/bot/schemas/schedule/: base.py  schedule.py
student_schedule_bot/libs/requests/: sender.py  status_codes.py
student_schedule_bot/student_schedule_bot/: asgi.py  config.py  logger.py  urls.py  wsgi.py
student_schedule_bot/student_schedule_bot/settings/: base.py  local.py  prod.py
